--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.2",
     "expo-location": "~18.0.1",
-    "expo-router": "~4.0.6",
+    "expo-router": "^3.5.24",
     "expo-status-bar": "~2.0.0",
     "geolib": "^3.3.4",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-url-polyfill": "^2.0.0",
-    "tailwindcss": "^3.4.15",
-    "react-native-svg": "15.8.0"
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
